# LapinECS

./: CMakeLists.txt  main.cpp
Dependencies/: flecs  raylib
Engine/: BaseECSComponents.h  BaseECSTags.h  CMakeLists.txt  ConstantData.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  Types.h  Utils.cpp  Utils.h
